--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "littleconf",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Simple and small library for loading configuration files and options",
   "main": "./lib/index.js",
   "repository": {
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "js-yaml": "^3.12.0",
-    "objtools": "^2.0.1"
+    "objtools": "^2.0.1",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
