--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "littleconf",
-  "version": "0.2.1",
+  "version": "1.0.0",
   "description": "Simple and small library for loading configuration files and options",
   "main": "./lib/index.js",
   "repository": {
@@ -16,16 +16,17 @@
     "version": "0.2.0"
   },
   "dependencies": {
-    "js-yaml": "^3.12.0",
-    "objtools": "^2.0.1",
+    "js-yaml": "^3.14.0",
+    "objtools": "^3.0.0",
     "sha1": "^1.1.1"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^5.5.0",
-    "eslint-config-zipscene": "^0.2.3",
-    "mocha": "^5.2.0",
-    "yuidocjs": "^0.10.2"
+    "chai": "^4.2.0",
+    "eslint": "^7.8.1",
+    "mocha": "^8.1.3"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">= 14.0.0"
+  }
 }
